# Nomenclator_open

./: README.md  main.py  pyproject.toml  replit_zip_error_log.txt  sample_fields.csv
configurations/: Proba confg.json
static/css/: styles.css
static/js/: app.js
templates/: index.html
translations/en/LC_MESSAGES/: messages.mo  messages.po
translations/es/LC_MESSAGES/: messages.mo  messages.po
uploads/: test_mixed_fields.csv  valors.csv
